# freeuv3

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CREDITS.md  CTestConfig.cmake  ISSUES.md  PROJECT  README.md  README.rst  TODO  annotated.html  classes.html  classfree_u_v3_1_1_u_v3_decoder-members.html  classfree_u_v3_1_1_u_v3_decoder.html  classfree_u_v3_1_1_u_v3_decoder_private-members.html  classfree_u_v3_1_1_u_v3_decoder_private.html  classfree_u_v3_1_1_u_v3_decoder_private_1_1_u_v_factory-members.html  classfree_u_v3_1_1_u_v3_decoder_private_1_1_u_v_factory.html  classfree_u_v3_1_1_u_v3_file-members.html  classfree_u_v3_1_1_u_v3_file.html  classfree_u_v3_1_1_u_v3_file__inherit__graph.dot  classfree_u_v3_1_1_u_v3_file__inherit__graph.md5  classfree_u_v3_1_1_u_v3_file_der-members.html  classfree_u_v3_1_1_u_v3_file_der.html  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf-members.html  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf.html  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf__coll__graph.dot  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf__coll__graph.md5  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf__inherit__graph.dot  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1_u_v34_stream_buf__inherit__graph.md5  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer-members.html  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer.html  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer__coll__graph.dot  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer__coll__graph.md5  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer__inherit__graph.dot  classfree_u_v3_1_1_u_v3_file_der_1_1_u_v3_file_private_1_1char__array__buffer__inherit__graph.md5  classfree_u_v3_1_1_u_v3_file_der__coll__graph.dot  (+87 more)
cmake/: FindCppCheck.cmake  FindIWYU.cmake  FindSphinx.cmake  FindTidy.cmake  code-coverage.cmake  conan.cmake
data/: test.UVData
doc/: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  CREDITS.rst  ISSUES.rst  LICENSE.rst  README.rst  TODO.rst  build.py  conf.py  downloads.rst  index.rst  sidebar.rst
doc/.doxygen/: CMakeLists.txt  Doxyfile.in
doc/.sphinx/: CMakeLists.txt  conf.py.in
doc/.sphinx/Utilities/: CMakeLists.txt
doc/.sphinx/Utilities/SphinxExtensions/: pyparsing.py
doc/.sphinx/templates/: globaltoc.html  layout.html
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  search.js  searchdata.js  variables_1.js
src/: CMakeLists.txt  uv3decoder.cpp  uv3decoder.h
test/: CMakeLists.txt  main.cpp
